Fixed a bug where zooming in would show overflow

--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,10 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-html {
-    overflow-x: hidden;
-}
-
 body {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 .main {
